--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1>logo</h1>
         <nav>
           <ul>
-            <li><a href="#">item</a></li>
+            <li><a href="about.html">item</a></li>
             <li><a href="#">item</a></li>
             <li><a href="#">item</a></li>
             <li><a href="#">item</a></li>
