--- a/about.html
+++ b/about.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/style.css">
     <title>about</title>
-</head>
-<body>
-    <div class="wrapper"><h1>aqbout</h1></div>
-    
-</body>
+  </head>
+  <body>
+    <div class="wrapper">
+        <h1>aqbout</h1>
+    </div>
+  </body>
 </html>
